# fty-asset-mg

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Findcore.cmake  Findmagic.cmake  Jenkinsfile  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  license.xml  project.xml
accessor/: CMakeLists.txt
accessor/public_includes/: fty_asset_accessor.h
accessor/src/: fty_asset_accessor.cc
accessor/test/: test.cpp
asset/: CMakeLists.txt
asset/asset/: asset-cam.h  asset-computed.h  asset-configure-inform.h  asset-db.h  asset-helpers.h  asset-import.h  asset-licensing.h  asset-manager.h  csv.h  db.h  error.h  json.h  test-db.h
asset/src/: asset-cam.cpp  asset-computed.cpp  asset-configure-inform.cpp  asset-db.cpp  asset-helpers.cpp  asset-import.cpp  asset-licensing.cpp  csv.cpp  json.cpp  test-db.cpp
asset/src/manager/: create.cpp  delete.cpp  export.cpp  import.cpp  read.cpp
asset/test/: create.cpp  delete.cpp  export.cpp  import.cpp  main.cpp  read.cpp  test-utils.h  usize.cpp
asset/test-db/: sample-db.cpp  sample-db.h  test-db.cpp  test-db.h
asset/test-db/structure/: bios_asset_device_type.h  bios_asset_element.h  bios_asset_element_type.h  bios_asset_ext_attributes.h  bios_asset_group_relation.h  bios_asset_link.h  bios_asset_link_type.h  bios_device_type.h  bios_discovered_device.h  bios_monitor_asset_relation.h
asset/test/conf/: logger.conf
asset/test/db/: insert.cpp  names.cpp  select.cpp
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
builds/valgrind/: ci_build.sh
cli/: fty-asset-cli.cc
doc/: .gitignore  Makefile.am  agent_asset.txt  asciidoc.conf  bios_asset_server.doc  bios_asset_server.txt  fty-asset.adoc  mkman
include/: Makefile.am  agent_asset.h  agent_asset_library.h  bios_asset_autoupdate.h  bios_asset_server.h  bios_legacy_asset_server.h  fty-asset.h  fty_asset.h  fty_asset_autoupdate.h  fty_asset_configurator.h  fty_asset_dto.h  fty_asset_inventory.h  fty_asset_legacy_server.h  fty_asset_library.h  fty_asset_server.h  fty_asset_uptime.h  fty_asset_uptime_configurator.h
include/asset/conversion/: json.h
lib/: CMakeLists.txt
lib/include/conversion/: json.h  proto.h
lib/include/conversion/utils/: msgbus-utils.h
lib/public_includes/: fty_asset_dto.h  fty_common_asset.h
lib/src/: fty_asset_dto.cc  fty_common_asset.cc
lib/src/conversion/: full-asset.cc  json.cc  proto.cc
lib/src/conversion/utils/: msgbus-utils.cc
lib/test/: test.cpp
packaging/debian/: agent-asset-dev.install  agent-asset.dsc  agent-asset.install  changelog  control  copyright  fty-asset-server.install  fty-asset.dsc.obs  fty-asset.install  fty-asset.manpages  libagent-asset0.install  libfty-asset-accessor-dev.install  libfty-asset-accessor.install  libfty-asset-dev.install  libfty-asset-utils-dev.install  libfty-asset-utils.install  libfty-asset.install  libfty-asset0.install  libfty-asset1.install  rules
packaging/redhat/: agent-asset.spec  fty-asset.spec
server/: CMakeLists.txt  fty-asset.service.in
server/include/: fty-asset.h  fty_asset_autoupdate.h  fty_asset_inventory.h  fty_asset_library.h  fty_asset_server.h
server/include/asset/: dbhelpers.h
server/include/asset/conversion/: proto.h
server/src/: .gitignore  asset-server.cc  asset-server.h  dbhelpers.cc  dbhelpers.h  dns.cc  dns.h  fty-asset.cc  fty-lock.h  fty_asset_autoupdate.cc  fty_asset_classes.h  fty_asset_inventory.cc  fty_asset_server.cc  topology_processor.cc  topology_processor.h  total_power.cc  total_power.h
server/src/asset/: asset-cam.cc  asset-cam.h  asset-db-test.cc  asset-db-test.h  asset-db.cc  asset-db.h  asset-storage.h  asset-utils.cc  asset-utils.h  asset.cc  asset.h
server/src/asset/conversion/: full-asset.cc  json.cc  proto.cc
server/src/topology/: cleanup.h  dbtypes.h  topology_input_powerchain.cc  topology_input_powerchain.h  topology_location.cc  topology_location.h  topology_power.cc  topology_power.h
server/src/topology/db/: topology2.cc  topology2.h
server/src/topology/msg/: asset_msg.cc  common_msg.cc
server/src/topology/persist/: assetcrud.cc  assetcrud.h  assettopology.cc  assettopology.h  dbhelpers2.cc  dbhelpers2.h  monitor.cc  persist_error.cc
server/src/topology/shared/: asset_general.cc  asset_general.h  data.cc  location_helpers.cc  location_helpers.h  utilspp.cc  utilspp.h
server/tests/: fty_asset_selftest.cc
src/: .gitignore  .valgrind.supp  Makemodule.am  agent_asset_classes.h  agent_asset_cli.cc  agent_asset_selftest.cc  asset-server.cc  asset-server.h  asset_defs.cc  asset_defs.h  bcli.cc  bios-agent-asset.cfg.in  bios-agent-asset.service.in  bios_agent_asset.cc  bios_asset_autoupdate.cc  bios_asset_server.cc  bios_legacy_asset_server.cc  dbhelpers.cc  dbhelpers.h  dbpath.cc  dbpath.h  defs.cc  defs.h  dns.cc  dns.h  fty-asset-cli.cc  fty-asset.cc  fty-asset.cfg.in  fty-asset.service.in  fty_asset.cc  fty_asset_autoupdate.cc  fty_asset_classes.h  fty_asset_cli.cc  fty_asset_configurator.cc  fty_asset_configurator.h  fty_asset_dto.cc  fty_asset_inventory.cc  fty_asset_legacy_server.cc  fty_asset_manipulation.cc  fty_asset_manipulation.h  (+20 more)
src/actions/: delete.cc  delete.h
src/asset/: asset-db-test.cc  asset-db-test.h  asset-db.cc  asset-db.h  asset-storage.cc  asset-storage.h  asset-utils.cc  asset-utils.h  asset.cc  asset.h
src/asset/conversion/: fty-proto.cc  fty-proto.h  full-asset.cc  full-asset.h  json.cc  json.h  proto.cc  proto.h
src/test/: db.h  main.cc  testdb.h
src/topology/: topology_input_powerchain.cc  topology_input_powerchain.h  topology_location.cc  topology_location.h  topology_power.cc  topology_power.h
src/topology_power/: app.h  bios_agent.h  cleanup.h  dbtypes.h  topology_power.cc  topology_power.h  ymsg.h
utils/: CMakeLists.txt
utils/include/: db-gp-helpers.h
utils/public_includes/asset/serialization/: serialization.h
utils/src/asset/conversion/: full-asset.cc  json.cc  proto.cc
utils/src/asset/conversion/utils/: msgbus-utils.cc
utils/src/asset/serialization/: serialization.cc
(+38 files in other folders)
